--- a/Game/style.css
+++ b/Game/style.css
@@ -13,7 +13,7 @@ body {
 }
 
 #gameCanvas{
-    background-color: white;
+    background: url(./background.png);
     border-radius: 0.5rem;
     box-shadow: 0 0 20px rgb(55, 55, 55);
 }
